fix left alignment

--- a/source/style.css
+++ b/source/style.css
@@ -114,7 +114,7 @@ svg.checkmark {
 /* wrapper class */
 .wrapper {
   margin-bottom: 20px;
-  margin-left: 20px;
+  margin-left: 2px;
   margin-right: 5px;
   margin-top: 20px;
 }
